# Flight-Crew-Management

./: .gitignore  README.md  pyproject.toml
data/scenarios/batch_001/: variants.json
data/scenarios/batch_001/S001/: meta.json  scenario.json
data/scenarios/batch_001/S002/: crew.json  duties.json  meta.json  preferences.json
data/scenarios/batch_001/S003/: crew.json  duties.json  meta.json  preferences.json
data/scenarios/batch_001/S004/: meta.json  preferences.json
scripts/: generate_scenarios.py  inspect_instance.py  preprocess_instance.py  run_feasibility_roster.py  run_rostering_model.py  run_scenarios.py  tempCodeRunnerFile.py
src/FlightCrew.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/crew_rostering/domain/: crew.py  duty.py  preferences.py
src/crew_rostering/model/: feasibility_model.py  rostering_model.py
src/crew_rostering/preprocessing/: coverage_check.py  duty_conflicts.py  eligibility.py  loaders.py  validate_crew_duties.py
src/crew_rostering/solver/: solve_instance.py
src/crew_rostering/visualization/: report.py
