[project]
name = "FlightCrew"
version = "0.1.0"
description = "Flight Crew Management"
requires-python = "==3.11.13"

dependencies = [
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "ortools",
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
